restproxy/kafka-proxy-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafkadomain-cloud-proxy
  namespace: develop-domain 
spec:
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
  type: NodePort
  selector:
    app: kafkadomain-cloud-proxy
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kafkadomain-cloud-proxy
  namespace: develop-domain
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kafkadomain-cloud-proxy
    spec:
      containers:
      - name: kafkadomain-cloud-proxy
        image: confluentinc/cp-kafka-rest:5.1.3
        imagePullPolicy: Always
        command: ["/bin/bash", "-c"]
        args: ["kafka-rest-start /etc/kafka-rest-cloud/kafka-rest.properties"]
        ports:
        - containerPort: 8082
        readinessProbe:
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 3
          httpGet:
            path: /
            port: 8082
        livenessProbe:
          initialDelaySeconds: 20
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
          httpGet:
            path: /
            port: 8082
        resources:
          requests:
            memory: "250Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        volumeMounts:
          - name: kafkadomain-rest-config
            mountPath: /etc/kafka-rest-cloud/
            readOnly: true
      restartPolicy: Always
      volumes:
        - name: kafkadomain-rest-config 
          secret:
            secretName: kafkadomain-rest-config
